# social_imaging_scripts

./: .refactor_plan.txt  INTEGRATION_SUMMARY.md  README.md  ROTATION_BEFORE_CROP_FIX.md  _tmp_merge.py  _tmp_rerun.py  _tmp_run.py  draw_cross.py  imagingPipelineAgentInstruct.txt  pyproject.toml  registration_order_analysis.md  sparse_noise.py  suite2p_jl  suite2p_ops_may2025.npy  test.ipynb  test_manual_prematch_integration.py  tmp_patch.diff  tracking_functions.py
analysis/: bpanalysis.py  tuninganalysis.py  utils.py
environments/: antspy-win.yml
exampleNotebooks/: [Tutorial 1] Basic Usage.ipynb  batch_two_photon_pipeline.ipynb  compare_prematch_approaches.ipynb  confocal_central_crop_test.ipynb  fToA_registration_jl.ipynb  fireantsTest.ipynb  functional_to_anatomy_qc.ipynb  functional_to_anatomy_registration_prototype.ipynb  generate_animal_yaml.ipynb  manual_confocal_prematch.ipynb  momentsAlignmentMinimal.ipynb  subStackAlignment_jl.ipynb  subStackAlignment_loop_jl.ipynb  two_photon_preprocessing_f10.ipynb
metadata/: animals_entries.xlsx  animals_entries_new.xlsx  animals_template.xlsx  build_from_excel.py  build_from_excel_backup_session_based.py  convert_entries_to_flat.py  pipeline_defaults.yaml  project.yaml  write_flat_template.py
registration/: ants_cluster_adapt.sh  generate_nrrd_clean.ipynb  roiregistration.py  signalextraction.py
src/: alignSubstackUtils.py  saveFunctionalProjections.py
stimulus/: imaging_session.py  stim_rf_nat.py  stimulus_functions.py  track_stim_sync.py
wiki/: manual_prematch_workflow.md  metadata_entry_workflow.md
(+41 files in other folders)
